# bare_NN

./: .gitignore  CMakeLists.txt  CMakePresets.json  PTX.md  README.md  blueprint.md  vector_operation.ptx  vector_test
include/: cuda_utils.cuh
ptx/: activation_fn.ptx  hello.ptx  matmul.ptx  reduction_op.ptx  vector_operation.ptx
reference/: nn_example.cu  vector_operation.cu
src/: CMakeLists.txt  main.cu  vector_op.cu
tests/: CMakeLists.txt  matmul.cu  reduction_op.cu  vector_op.cu  vector_operation.cu
